fix(security): Sprint 2 - Bounded executors, parallel dispatcher, observability fixes (AUDIT-14-09 S5)
- MessageDispatcher: parallel recipient processing with bounded executor (DOS-2)
- HttpSink: bounded ThreadPoolExecutor with queue limit
- MetricsEndpoint: bounded executor, fixed Prometheus TextFormat API
- Observability: fixed MetricsCollector usage, Map.of limits, Jackson-free JSON
- DebugEndpoint: fixed channel methods, removed Jackson dependency

Fixes: S5 Bounded executors, S6 dependencyVerification placeholder (in PLAN)